# modorganizer-bsa_extractor

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  appveyor.yml  metadata.json  vcpkg.json
.github/workflows/: build.yml  linting.yml
src/: CMakeLists.txt  SConscript  archivehandlerdispatch.cpp  archivehandlerdispatch.h  bsaExtractor.pro  bsa_extractor_en.ts  bsaextractor.cpp  bsaextractor.h  bsaextractor_global.h
src/uibase/game_features/: gamearchivehandler.h
tests/: CMakeLists.txt  test_archivehandlerdispatch.cpp  test_main.cpp
